--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "playlist",
-  "version": "1.0.0",
+  "name": "linefinder-example-alice-in-iframeland",
+  "version": "0.0.0",
   "description": "",
   "main": "lib/main.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/loveencounterflow/linefinder-example-alice-in-iframeland.git"
+  },
   "scripts": {
     "serve": "nodexh lib/watcher.js",
     "test": "echo \"Error: no test specified\" && exit 1"
