--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "dependencies": {
     "five-server": "^0.3.1",
     "guy": "^13.7.1",
+    "intersock": "^0.0.1",
     "intertype": "~0.119.1",
     "linefinder": "^1.0.11",
     "moonriver": "^4.8.2",
     "mudom": "^1.0.10",
     "nodexh": "^2.2.0",
+    "webguy": "^0.0.3",
     "zx": "^7.2.2"
   }
 }
