--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "debounce": "^1.2.1",
     "five-server": "^0.3.1",
     "guy": "^13.7.1",
     "intersock": "^0.0.1",
